# claude-code-recall

./: .gitignore  DEPLOY.md  README.md  install.sh  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
client/: recall-push-outputs.py  recall-upload.py
cloudflare/: wrangler.jsonc
cloudflare/src/: index.js
eval/: run-eval.py
hooks/: hooks.json
scripts/: check-update.sh  daily-synthesis.sh  recall-gate.py  work-timeline-consolidate.py  work-timeline-rollup.py  work-timeline-threads.py  work-timeline.py
server/: Dockerfile  pyproject.toml
server/recall_pipeline/: __init__.py  cli.py  consolidate.py  context.py  llm.py  rollup.py  threads.py  timeline.py
server/recall_server/: __init__.py  app.py  build.py  config.py  r2.py  search.py  storage.py  tenants.py  ui.py  ui_page.html
skills/recall/: SKILL.md  recall.py
