[project]
name = "recall-pipeline"
version = "0.1.0"
description = "Server-side port of the claude-code-recall work-timeline pipeline (Anthropic API backend)"
# 3.10+: FastMCP introspects tool signatures at runtime, and app.py uses
# PEP 604 unions (str | None) that 3.9's get_type_hints can't evaluate.
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.10",
]

[project.optional-dependencies]
r2 = ["boto3>=1.34"]           # R2 persistence (S3-compatible)
dev = ["moto[server]>=5.0", "httpx>=0.27"]   # S3 emulator + test client

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recall_pipeline", "recall_server"]
